listo el header, textarea y condicion -mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <textarea name="encrypted-sms" id="encrypted-sms"  placeholder="Ingrese el texto aqui"></textarea>
             </div>
             <div class="condition-sms">
-                <img class="condition-exclamation" src="./imagenes/exclamation.png" alt="icono exclamacion">
+                <img class="condition-icon" src="./imagenes/exclamation.png" alt="icono exclamacion">
                 <p class="condition-description">Solo letras minusculas y sin acentos</p>
             </div>
             <section class="button">
