cajas para mostar contenido en js del mensaje encriptado

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
                 <button class="main-button">Encriptar</button>
                 <button>Desencriptar</button>
             </section>
-            <div class="decrypten-area">
-                <div class="warning-text">
-                    <h2 class="warning-title">Ningún mensaje fue encontrado</h2>
-                    <p class="warning-des">Ingresa el texto que desees encriptar o desencriptar.</p>
+                <div class="decrypten-area">
+                    <div class="warning-text">
+                        <h2 class="warning-title">Ningún mensaje fue encontrado</h2>
+                        <p class="warning-des">Ingresa el texto que desees encriptar o desencriptar.</p>
+                        <!-- <p id="ade">deededededededede</p> -->
+                    </div>
                 </div>
-            </div>
-            <!-- <div class="button">
-                <button>Copiar</button>
-            </div> -->
+                <!-- <div id="copy-button" class="button">
+                    <button>Copiar</button>
+                </div>             -->
         </main>
         <footer>
             <p>#Desarrollado por Abel Andrés Ortiz H.</p>
