--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
     <title>Alura - Encriptador</title>
 </head>
 <body>
-    <header>
-        <img class="logo-alura" src="./imagenes/Logo.svg" alt="Logo Alura">
-    </header>
-    <main>
-        <section class="contenedor-textarea">
-            <textarea class="textarea" cols="80" rows="10" placeholder="Ingrese el texto aqui"></textarea>
-            <div class="informacion">
-                <img src="./imagenes/excla.svg" alt="icono de exclamacion">
-                <p>Solo letras minúsculas y sin acentos</p>
-            </div>
-            <div class="botones">
-                <button class="btn-encriptar">Encriptar</button>
-                <button class="btn-desencriptar">Desencriptar</button>
-            </div>
-        </section>
-        <section class="contenedor-mensaje">
-            <textarea class="mensaje" cols="30" rows="10" ></textarea>
-            <!-- <h2>Ningun mensaje encontrado</h2>
-            <p>Ingresa el texto que deseas encriptar o desencriptar.</p> -->
-            <div class="contenedor-btn-copiar">
-                <button class="btn-copiar">Copiar</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>#Desarrollado por Abel Ortiz H.</p>
-    </footer>
+    <div class="contenedor-principal"> 
+        <header>
+            <img class="logo-alura" src="./imagenes/Logo.svg" alt="Logo Alura">
+        </header>
+        <main>
+            <section class="contenedor-textarea">
+                <textarea class="textarea" cols="80" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+                <div class="informacion">
+                    <img src="./imagenes/excla.svg" alt="icono de exclamacion">
+                    <p>Solo letras minúsculas y sin acentos</p>
+                </div>
+                <div class="botones">
+                    <button class="btn-encriptar">Encriptar</button>
+                    <button class="btn-desencriptar">Desencriptar</button>
+                </div>
+            </section>
+            <section class="contenedor-mensaje">
+                <textarea class="mensaje" cols="30" rows="10" ></textarea>
+                <!-- <h2>Ningun mensaje encontrado</h2>
+                <p>Ingresa el texto que deseas encriptar o desencriptar.</p> -->
+                <div class="contenedor-btn-copiar">
+                    <button class="btn-copiar">Copiar</button>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>#Desarrollado por Abel Ortiz H.</p>
+        </footer>  
+    </div>
+    
 </body>
 </html>
