--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </section>
             <section class="contenedor-mensaje">
                 <textarea class="mensaje" cols="30" rows="10" ></textarea>
-                <!-- <h2>Ningun mensaje encontrado</h2>
-                <p>Ingresa el texto que deseas encriptar o desencriptar.</p> -->
+                <h2>* Ningún mensaje encontrado</h2>
+                <p>Ingresa el texto que deseas encriptar o desencriptar.</p>
                 <div class="contenedor-btn-copiar">
                     <button class="btn-copiar">Copiar</button>
                 </div>
