finalizando Css version desktop

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <section class="contenedor-textarea">
-                <textarea class="textarea" cols="80" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+                <textarea class="textarea" cols="80" rows="10" placeholder="Ingrese el texto aqui..."></textarea>
                 <div class="informacion">
                     <img src="./imagenes/excla.svg" alt="icono de exclamacion">
                     <p>Solo letras minúsculas y sin acentos</p>
