--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <p>Solo letras minúsculas y sin acentos</p>
                 </div>
                 <div class="botones">
-                    <button class="btn-encriptar">Encriptar</button>
-                    <button class="btn-desencriptar">Desencriptar</button>
+                    <button class="btn-encriptar" id="encriptar" onclick="encriptar()">Encriptar</button>
+                    <button class="btn-desencriptar" id="desencriptar" onclick="desencriptar()">Desencriptar</button>
                 </div>
             </section>
             <section class="contenedor-mensaje">
@@ -32,7 +32,7 @@
                 <h2>* Ningún mensaje encontrado</h2>
                 <p>Ingresa el texto que deseas encriptar o desencriptar.</p>
                 <div class="contenedor-btn-copiar">
-                    <button class="btn-copiar">Copiar</button>
+                    <button class="btn-copiar" onclick="copiar()">Copiar</button>
                 </div>
             </section>
         </main>
