--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="/script.js"></script>
     <title>Alura - Encriptador</title>
 </head>
 <body>
@@ -17,29 +18,39 @@
         </header>
         <main>
             <section class="contenedor-textarea">
-                <textarea class="textarea" cols="80" rows="10" placeholder="Ingrese el texto aqui..."></textarea>
+                <textarea class="textarea" cols="50" rows="20" placeholder="Ingrese el texto aqui..."></textarea>
                 <div class="informacion">
                     <img src="./imagenes/excla.svg" alt="icono de exclamacion">
                     <p>Solo letras minúsculas y sin acentos</p>
                 </div>
                 <div class="botones">
-                    <button class="btn-encriptar" id="encriptar" onclick="encriptar()">Encriptar</button>
-                    <button class="btn-desencriptar" id="desencriptar" onclick="desencriptar()">Desencriptar</button>
+                    <button class="btn-encriptar" id="encriptar" >Encriptar</button>
+                    <button class="btn-desencriptar" id="desencriptar">Desencriptar</button>
                 </div>
             </section>
             <section class="contenedor-mensaje">
-                <textarea class="mensaje" cols="30" rows="10" ></textarea>
-                <h2>* Ningún mensaje encontrado</h2>
-                <p>Ingresa el texto que deseas encriptar o desencriptar.</p>
+                <textarea class="mensaje" cols="30" rows="10" placeholder="📪 Nuevo mensaje encriptado" ></textarea>
+                <!-- <h2 id="ningun-mensaje">* Ningún mensaje encontrado</h2>
+                <p id="sms-ingresa-texto">Ingresa el texto que deseas encriptar o desencriptar.</p> -->
                 <div class="contenedor-btn-copiar">
-                    <button class="btn-copiar" onclick="copiar()">Copiar</button>
+                    <button class="btn-copiar">Copiar</button>
                 </div>
             </section>
+           
         </main>
         <footer>
             <p>#Desarrollado por Abel Ortiz H.</p>
         </footer>  
     </div>
-    
+    <script>
+        let btnEncriptar = document.querySelector(".btn-encriptar");
+        btnEncriptar.onclick = encriptar;
+
+        let btnDesencriptar = document.querySelector(".btn-desencriptar");
+        btnDesencriptar.onclick = desencriptar;
+
+        let btnCopiar = document.querySelector(".btn-copiar");
+        btnCopiar.onclick = copiar;
+    </script>
 </body>
 </html>
